# Brownfield-Cartographer

./: .env.example  .gitignore  CODEBASE_CHECKLIST.md  INTERIM_SUBMISSION_ANSWERS.md  LLM_vs_Heuristics_Comparison.md  README.md  RECONNAISSANCE.md  WHAT_TO_EXPECT_JAFFLE_SHOP.md  pyproject.toml  visualize_network.py
.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json
jaffle_shop_artifacts/.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.graphml  lineage_graph.html  lineage_graph.json  module_graph.graphml  module_graph.html  module_graph.json  onboarding_brief.md
jaffle_shop_llm/.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run.json  lineage_graph.graphml  lineage_graph.html  lineage_graph.json  module_graph.graphml  module_graph.html  module_graph.json  onboarding_brief.md
jaffle_shop_no_llm/.cartography/: CODEBASE.md  cartography_trace.jsonl  last_run.json  lineage_graph.graphml  lineage_graph.html  lineage_graph.json  module_graph.graphml  module_graph.json  onboarding_brief.md
jaffle_shop_test/.cartography/: lineage_graph.json  module_graph.json
jaffle_shop_test2/.cartography/: lineage_graph.json  module_graph.json
jaffle_shop_test3/.cartography/: lineage_graph.json  module_graph.json
self_test/.cartography/: lineage_graph.json  module_graph.json
self_test_final/.cartography/: lineage_graph.json  module_graph.json
src/: __init__.py  cli.py  embeddings.py  orchestrator.py
tests/: __init__.py  test_navigator.py  test_network_metrics.py  test_semanticist.py  test_sql_lineage.py
(+22 files in other folders)
